<resources>
    <string name="app_name">AngelTalk</string>
    <string name="share_functions_url">https://us-central1-angeltalk-app-a26d8.cloudfunctions.net/redirectApp/</string>
    <string name="shortener_api_key">AIzaSyAZQwhfKiXxAGMZx4aoKHv9A54YoFMLeBQ</string>
    <string name="web_url">https://www.angeltalk.info</string>
    <string name="font_demilight">Roboto-Light.otf</string>
    <string name="font_regular">Roboto-Regular.otf</string>
    <string name="font_medium">Roboto-Medium.otf</string>
    <string name="add_picture">Add a photo or\n a video clip</string>
    <string name="take_picture">Take a photo</string>
    <string name="select_gallery">Bring from gallery</string>
    <string name="take_video">Shoot a video</string>
    <string name="inform_inside_card_view">Take a photo within the frame</string>
    <string name="require_card_name">Type card name</string>
    <string name="choose_picture">Select Picture</string>
    <string name="inform_editing_picture">Move, zoom in/out on the photo\nto the size you want</string>
    <string name="talk_now">Speak Now!</string>
    <string name="check_recorded_voice">Check the recording</string>
    <string name="add_new_card_success">New card is added</string>
    <string name="add_share_card_success">The shared card is added</string>
    <string name="lock_guide">Drag the lock out of the circle</string>
    <string name="lock_long_press_guide">Long press lock button</string>
    <string name="delete_alert_message">Do you really want to delete this \'%s\' Card?</string>
    <string name="confirm">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="add_new_card">New Card</string>
    <string name="new_category">New Category</string>
    <string name="new_category_button_text">NEW</string>
    <string name="complete">Done</string>
    <string name="delete_category">Do you really want to delete this category and all cards in it?</string>
    <string name="total_card">%1$d Cards</string>
    <string name="icon_label">Icon</string>
    <string name="background_label">Color</string>
    <string name="new_category_name">Category Name</string>
    <string name="category_label">Category Name</string>
    <string name="enter_new_category_name">Enter less than 12 characters</string>
    <string name="record_card_name">Record card name</string>
    <string name="rerecord_card_name">Record new name</string>
    <string name="inform_show_child_mode">AngelTalk will appear on lock screen</string>
    <string name="inform_hide_child_mode">AngelTalk will disappear from lock screen</string>
    <string name="format_day">EEEE, dd MMMM, yyyy</string>
    <string name="noti_privacy">Privacy Policy</string>
    <string name="noti_usages">Terms of Service</string>
    <string name="noti_oss">Open Source License</string>
    <string name="noti_voc">Send feedback</string>
    <string name="video_guide">Shoot a three-second video clip</string>
    <string name="init_count_text">00:00</string>
    <string name="kakao_add_new_card_text">Check out this \'%s\' card on your AngelTalk</string>
    <string name="kakao_button_go_to_app">Go to AngelTalk</string>
    <string name="show_hide_text">Show/Hide</string>
    <string name="change_order_text">Change sort order</string>
    <string name="share_card_message">Save this card to your AngelTalk</string>
    <string name="new_card_title">New Card</string>
    <string name="select_category_to_save_new_card">Choose a category for this card</string>
    <string name="video_content_check_guide">Check the video clip captured</string>
    <string name="msg_select_messenger">Choose an app to send this card</string>
    <string name="photo_content_check_guide">Check the photo taken</string>
    <string name="share_message">AngelTalk \'%s\' card is shared\n</string>
    <string name="card_edit_select_guide">Which one do you want change?</string>
    <string name="card_edit_content">Photo / Video</string>
    <string name="card_edit_name">Card Name</string>
    <string name="card_edit_voice">Voice</string>
    <string name="edit_content_guide_text">Edit the photo /\nvideo clip</string>
    <string name="card_edit_success_message">This card is edited</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="messages">Messages</string>
    <string name="card_share_preparing_message">Your card is being prepared to be shared!</string>
    <string name="card_loading_message">Please wait until the card is ready to show</string>
    <string name="inform_not_saved">The category you are creating will be aborted. Proceed?</string>
    <string name="one_left_delete_category">It should have at least a item. Make a new one after this?</string>
    <string name="share_fail_message">Oops! We encountered an unexpected problem. \nPlease try again!</string>
    <string name="cannot_share_card_save_message">Cannot save the card. Please try again!</string>
    <string name="card_edit_title">Edit Card</string>
    <string name="category_eat_drink">EAT &amp; DRINK</string>
    <string name="category_play">PLAY</string>
    <string name="category_ride">RIDE</string>
    <string name="category_go">GO</string>
    <string name="category_people">PEOPLE</string>
    <string name="sample_card_milk">Milk</string>
    <string name="sample_card_juice">Juice</string>
    <string name="sample_card_drinkwater">Drink water</string>
    <string name="sample_card_painting">Painting</string>
    <string name="sample_card_block">Toy blocks</string>
    <string name="sample_card_crayon">Crayon</string>
    <string name="sample_card_coloredpaper">Colored paper</string>
    <string name="sample_card_swing">Swing</string>
    <string name="sample_card_airplane">Airplane</string>
    <string name="sample_card_bus">Bus</string>
    <string name="sample_card_car">Car</string>
    <string name="sample_card_handwashing">Handwashing</string>
    <string name="sample_card_amusement_park">Amusement park</string>
    <string name="sample_card_fast_food">Fast food</string>
    <string name="sample_card_pool">Pool</string>
    <string name="sample_card_mall">Mall</string>
    <string name="sample_card_teacher">Teacher</string>
    <string name="sample_card_daddy">Daddy</string>
    <string name="sample_card_mommy">Mommy</string>

    <string name="privacy_web_url">https://angeltalk-app-a26d8.firebaseapp.com/en/popup/privacy_policy.html</string>
    <string name="terms_web_url">https://angeltalk-app-a26d8.firebaseapp.com/en/popup/terms_of_service.html</string>
    <string name="oss_web_url">https://angeltalk-app-a26d8.firebaseapp.com/en/popup/open_source.html</string>
    <string name="voc_web_url">https://docs.google.com/forms/d/1jaWhUQse_1RmqOCG2vQ_oW3QNCGv4AYowrhS6BOqNnU/edit</string>
    <string name="change_order_toast_message">Press a little longer to move a card</string>

    <!-- onboarding -->
    <string name="onboarding_title">Application for children \nwith complex communication needs</string>
    <string name="bug_report_title">버그 리포트를 보내시겠습니까?</string>
    <string name="bug_report">사용성 개선에 많은 도움이 됩니다</string>
    <string name="network_disconnected">Please turn on mobile data or wifi\nat the ‘setting’</string>
    <string name="card_download_fail">Oops! We encountered an unexpected problem.\nGo back to the ‘Message’ app?</string>

    <string name="kakao_app_key">79596264d79a5d8e3ada29bbd442abe0</string>
    <string name="kakao_scheme">kakao79596264d79a5d8e3ada29bbd442abe0</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="kakao_package_name">com.kakao.talk</string>
    <string name="whatsapp_package_name">com.whatsapp</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="o_x">O / X</string>
    <string name="response_yes">Yes</string>
    <string name="response_no">No</string>
    <string name="skip_button">SKIP</string>
    <string name="onboarding_privacy_guide">By starting the app,\n you agree to the AngelTalk Privacy Policy.</string>



</resources>
