<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        app:layout_heightPercent="18.32%"
        android:id="@+id/img_logo_popup"
        android:scaleType="fitXY"
        android:layout_width="350dp"
        android:src="@drawable/img_logo_popup"
        />

    <LinearLayout
        android:layout_width="350dp"
        app:layout_heightPercent="64.96%"
        android:layout_below="@id/img_logo_popup"
        android:orientation="vertical"
        android:background="@color/white">
        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/card_edit_select_guide"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:font="@string/font_regular"
            android:textColor="@color/black_99"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/card_edit_select_guide" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/card_edit_content_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:font="@string/font_regular"
            android:textColor="@color/black_cc"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/card_edit_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/card_edit_name_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:font="@string/font_regular"
            android:textColor="@color/black_cc"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/card_edit_name" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/card_edit_voice_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:font="@string/font_regular"
            android:textColor="@color/black_cc"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/card_edit_voice" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="350dp"
        app:layout_heightPercent="16.72%"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_alignParentEnd="true"
            android:text="@string/cancel"
            app:font="@string/font_medium"
            android:textColor="#d41468"
            android:textSize="16sp"
            android:enabled="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>