<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        app:layout_heightPercent="14.69%"
        android:id="@+id/img_logo_popup"
        android:scaleType="fitXY"
        android:layout_width="350dp"
        android:src="@drawable/img_logo_popup"
        />

    <LinearLayout
        android:layout_width="350dp"
        app:layout_heightPercent="71.91%"
        android:layout_below="@id/img_logo_popup"
        android:orientation="vertical"
        android:background="@color/white">
        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/text_select_category_guide"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            app:font="@string/font_regular"
            android:textColor="@color/black_99"
            android:textSize="16sp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/select_category_to_save_new_card" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/category_list_recycler_view"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:background="@color/white">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="350dp"
        app:layout_heightPercent="13.40%"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            app:font="@string/font_medium"
            android:textColor="@color/category_select_list_radiobutton_default"
            android:textSize="16sp"
            android:enabled="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:layout_toLeftOf="@id/confirm_button"
            app:font="@string/font_medium"
            android:textColor="#d41468"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>