<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        app:layout_heightPercent="20.35%"
        android:id="@+id/img_logo_popup"
        android:scaleType="fitXY"
        android:layout_width="350dp"
        android:src="@drawable/img_logo_popup"
        />

    <LinearLayout
        android:layout_width="350dp"
        app:layout_heightPercent="61.08%"
        android:layout_below="@id/img_logo_popup"
        android:orientation="vertical"
        android:background="@color/white">
        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/text_select_category_guide"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            app:font="@string/font_regular"
            android:textColor="@color/black_99"
            android:textSize="16sp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/msg_select_messenger" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/item_kakaotalk"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_kakaotalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:tag="radio"
                    android:theme="@style/CategorySelectRadioButton"
                    android:clickable="false"
                    />


                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/img_kakaotalk"
                    android:src="@drawable/ic_kakaotalk"
                    android:layout_toRightOf="@id/radio_kakaotalk"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"/>

                <act.angelman.presentation.custom.FontTextView
                    android:id="@+id/text_kakaotalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_kakaotalk"
                    android:layout_marginLeft="9dp"
                    android:text="@string/kakaotalk"
                    android:textColor="@color/black_cc"
                    android:textSize="15sp"
                    app:font="@string/font_regular" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/card_list_horizontal_border" />

            <RelativeLayout
                android:id="@+id/item_message"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:tag="radio"
                    android:clickable="false"
                    android:theme="@style/CategorySelectRadioButton" />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/img_message"
                    android:src="@drawable/ic_message"
                    android:layout_toRightOf="@id/radio_message"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"/>

                <act.angelman.presentation.custom.FontTextView
                    android:id="@+id/text_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/img_message"
                    android:layout_marginLeft="9dp"
                    android:text="@string/messages"
                    android:textColor="@color/black_cc"
                    android:textSize="15sp"
                    app:font="@string/font_regular" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="350dp"
        app:layout_heightPercent="18.57%"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            app:font="@string/font_medium"
            android:textColor="@color/category_select_list_radiobutton_default"
            android:textSize="16sp"
            android:enabled="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/card_list_horizontal_border" />

        <act.angelman.presentation.custom.FontTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:layout_toLeftOf="@id/confirm_button"
            app:font="@string/font_medium"
            android:textColor="#d41468"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>